@@ -84,6 +84,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\debug"
+				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/FastSearchD.pdb"
 				ImportLibrary="..\Debug/FastSearchD.lib"
@@ -185,6 +186,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=".."
+				IgnoreDefaultLibraryNames=""
 				ProgramDatabaseFile=".\Release/FastSearch.pdb"
 				ImportLibrary="../FastSearch.lib"
 				TargetMachine="1"
