@@ -3,56 +3,57 @@ Microsoft Visual Studio Solution File, Format Version 9.00
 # Visual C++ Express 2005
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBXMLFormats", "OBXMLFormats\OBXMLFormats.vcproj", "{01EBDA03-5A2F-4CD6-BBA8-432790C90CAB}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "FastSearch", "OBFS\OBFS.vcproj", "{73D4E0DE-CC4E-46D9-9C45-A7954AC09984}"
 	ProjectSection(ProjectDependencies) = postProject
 		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "gen3D", "gen3D\gen3D.vcproj", "{92F60357-B328-4A6D-B985-0923949F1579}"
 	ProjectSection(ProjectDependencies) = postProject
-		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBInchi", "OBInchi\OBInchi.vcproj", "{75E26EAC-EF71-497B-B834-DB1FC800F745}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBUtilFormats", "OBUtilFormats\OBUtilFormats.vcproj", "{B76458D3-9486-4C7A-9F95-18DB50E46CE6}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBMCDL", "OBMCDL\MCDL.vcproj", "{BEEAEE96-DD87-41E9-8A65-E25E7B552771}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBMoreFormats", "OBMoreFormats\OBMoreFormats.vcproj", "{62375F2A-A2D8-4373-9E65-EC7C93A723CF}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBDLL", "OBDLL\OBDLL.vcproj", "{510039BF-48BF-42AF-8827-EFCEFC15CFD2}"
@@ -69,63 +70,63 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBError", "OBError\OBError.
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBDESC", "OBDESC\OBDESC.vcproj", "{5FC22113-2E39-4715-AB5A-AB6B9F630293}"
 	ProjectSection(ProjectDependencies) = postProject
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBGUI", "OBGUI\OBGUI.vcproj", "{9CD453FA-B8CD-4F8B-90B2-928A7496C0AC}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBConsole", "OBConsole\OBConsole.vcproj", "{34CDCBDF-2089-4B81-B149-B0C792E52831}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBCommonFormats", "OBCommonFormats\OBCommonFormats.vcproj", "{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}"
 	ProjectSection(ProjectDependencies) = postProject
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBFPRT", "OBFPRT\OBFPRT.vcproj", "{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}"
 	ProjectSection(ProjectDependencies) = postProject
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBPythonOBF", "OBPythonOBF\OBPythonOBF.vcproj", "{6AEC1D4E-7942-45CD-93DD-84542A2307D9}"
 	ProjectSection(ProjectDependencies) = postProject
-		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
-		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
+		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
+		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBJava", "OBJava\OBJava.vcproj", "{9E03A998-783B-472F-A95C-B32A545092A0}"
 	ProjectSection(ProjectDependencies) = postProject
-		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
-		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
+		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
+		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OBCSharp", "OBCSharp\OBCSharp.vcproj", "{CCCFDB74-7F12-45A8-B57F-3D0E82461AD5}"
 	ProjectSection(ProjectDependencies) = postProject
-		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
-		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
-		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
-		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
-		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
 		{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C} = {C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}
+		{2DD212C4-8E87-4628-A72D-55BA471570C6} = {2DD212C4-8E87-4628-A72D-55BA471570C6}
+		{510039BF-48BF-42AF-8827-EFCEFC15CFD2} = {510039BF-48BF-42AF-8827-EFCEFC15CFD2}
+		{B448CA7F-F8C4-4148-9165-39045A92EF63} = {B448CA7F-F8C4-4148-9165-39045A92EF63}
+		{78F0CF7D-CABB-40FA-BD2A-4D2992232E5E} = {78F0CF7D-CABB-40FA-BD2A-4D2992232E5E}
+		{5FC22113-2E39-4715-AB5A-AB6B9F630293} = {5FC22113-2E39-4715-AB5A-AB6B9F630293}
 	EndProjectSection
 EndProject
 Global
